--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPA Exemplo</title>
+    <title>pdrmottadev - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,15 +15,15 @@
     
     <div id="content">
         <div id="home" class="section">
-            <h1>Bem-vindo ao Meu Portfólio</h1>
+            <h1>Welcome to My Portfólio</h1>
             <p>Essa é a página inicial.</p>
         </div>
         <div id="sobre" class="section" style="display:none;">
-            <h1>Sobre Mim</h1>
+            <h1>About Me</h1>
             <p>Informações sobre mim.</p>
         </div>
         <div id="contato" class="section" style="display:none;">
-            <h1>Contato</h1>
+            <h1>Contact</h1>
             <p>Formulário de contato.</p>
         </div>
     </div>
