--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div id="contato" class="section" style="display:none;">
             <h1>Contact</h1>
-            <p>Formulário de contato.</p>
+            <p>Form to contact me.</p>
         </div>
     </div>
 
