--- a/index.html
+++ b/index.html
@@ -9,21 +9,43 @@
 <body>
     <nav>
         <a href="#home" class="nav-link" data-section="home">Home</a>
-        <a href="#sobre" class="nav-link" data-section="sobre">Sobre</a>
-        <a href="#contato" class="nav-link" data-section="contato">Contato</a>
+        <a href="#projects" class="nav-link" data-section="projects">Projects</a>
+        <a href="#donate" class="nav-link" data-section="donate">Donate</a>
+        <a href="#about" class="nav-link" data-section="about">About</a>
+        <a href="#contact" class="nav-link" data-section="contact">Contact</a>
     </nav>
     
     <div id="content">
         <div id="home" class="section">
             <h1>Welcome to My Portfólio</h1>
-            <p>Essa é a página inicial.</p>
+            <p>This is my </p>
         </div>
-        <div id="sobre" class="section" style="display:none;">
+        <div id="projects" class="section" style="display:none;">
+            <h1>Projects</h1>
+            <p>Here are some of my projects:</p>
+            <h2>GSBD Util</h2>
+            <p>GSBD Util is a database management tool designed for dumping and restoring databases.</p>
+            <p>It is compatible with several DBMSs, including Microsoft SQL Server, MySQL, MariaDB, Oracle* (limited support), and Firebird 2.5.</p>
+            <a href="https://sourceforge.net/projects/gsbd-util/" target="_blank">Download on SourceForge</a>
+        </div>
+        <div id="donate" class="section" style="display:none;">
+            <h1>Donate</h1>    
+            <h1>Do you want to support my work? </h1>
+            <h1>You can donate any amount to help me keep this project alive.</h1>
+            <h2>Donate via Pix(For brazilian users)</h2>
+            <h2>Key: 5724d44b-7060-4794-942e-c2b0411acf57</h2>
+            <img src="media/pix.png" alt="Pix QR Code" width="200" height="200">
+            <h2>Donate via PayPal</h2>
+            <h2></h2>
+        </div>
+        <div id="about" class="section" style="display:none;">
             <h1>About Me</h1>
             <p>Informações sobre mim.</p>
         </div>
-        <div id="contato" class="section" style="display:none;">
+        <div id="contact" class="section" style="display:none;">
             <h1>Contact</h1>
+            <h2>Email: pdr.motta@gmail.com</h2>
+            <h2>Github: https://github.com/pdrmottadev </h2>
             <p>Form to contact me.</p>
         </div>
     </div>
